2007-07-11  Adam Piatyszek  <ediap@users.sourceforge.net>

	* itpp/comm/commfunc.cpp: Compilation warning suppressed by
	initializing the lambda variable

2007-07-04  Adam Piatyszek  <ediap@users.sourceforge.net>

	* itpp/base/matfunc.cpp, itpp/base/matfunc.h: Added repmat()
	function for vectors

	Matrin Senst provided a new repmat() implementation which
	concatenates a multiple number of vectors. It extends the
	functionality of recently added repmat() functions for matrices.

2007-06-29  Adam Piatyszek  <ediap@users.sourceforge.net>

	* itpp/signal/resampling.h: Minor spelling fixes in documentation

	* tests/*.cpp: Copyright dates updated

	* configure.ac: Version number updated

	* itpp/base/matfunc.cpp, itpp/base/matfunc.h,
	tests/matfunc_test.cpp, tests/matfunc_test.ref: Added repmat()
	function (feature request [1744527])

	This functions is a clone of a Matlab's repmat function. It
	expands an input matrix or vector to a larger matrix by
	concatenating (m x n) copies of the input matrix (vector). Thanks
	to Mark Dobossy for providing a patch.

2007-06-22  Adam Piatyszek  <ediap@users.sourceforge.net>

	* itpp/comm/ldpc.cpp: Improved LDPC binary files versioning

	A global static const variable LDPC_binary_file_version has been
	defined, which is now used in load/save methods of LDPC_Generator
	and LDPC_Code classes. Besides, H_defined and G_defined boolean
	variables are loaded/saved using the new stream operators of
	it_file and it_ifile classes.

	* TODO, itpp/base/binfile.cpp, itpp/base/binfile.h,
	itpp/base/itfile.cpp, itpp/base/itfile.h, tests/itfile_test.cpp,
	tests/itfile_test.ref, tests/itfile_test_data.it: Added support
	for bool variables in it_file class

	It is now possible to read and write bool variables using standard
	stream operators ">>" and "<<" of the it_file and it_ifile
	classes. Boolean variables are stored in a binary file using a
	char datatype.

==============================================================================
